--- a/package.json
+++ b/package.json
@@ -6,24 +6,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^48.0.7",
+    "@expo/ngrok": "^4.1.0",
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-navigation/stack": "^6.3.16",
+    "@unimodules/core": "^7.1.2",
+    "@unimodules/react-native-adapter": "^6.3.9",
+    "axios": "^1.3.6",
+    "expo": "^48.0.16",
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-build-properties": "^0.6.0",
+    "expo-camera": "~13.2.1",
     "expo-constants": "~14.2.1",
+    "expo-file-system": "^15.2.2",
+    "expo-font": "^11.1.1",
+    "expo-gl": "~12.4.0",
     "expo-linking": "~4.0.1",
-    "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.18.1",
+    "expo-router": "^1.5.3",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.2",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.7",
+    "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "react-360-web": "^1.1.0"
   },
   "resolutions": {
     "metro": "^0.73.7",
