--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
     "tinycolor2": "^1.6.0",
-    "expo-updates": "~0.16.4"
+    "expo-updates": "~0.16.4",
+    "expo-three": "3.2.1"
+
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
