--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "expo-router": "^1.5.3",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.2",
+    "expo-three": "6.0.0",
+
+    "expo-updates": "~0.16.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,10 +37,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
-    "tinycolor2": "^1.6.0",
-    "expo-updates": "~0.16.4",
-    "expo-three": "3.2.1"
-
+    "three": "0.127.0",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
