--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "metro": "^0.73.7",
     "metro-resolver": "^0.73.7"
   },
-  "name": "testexporeact",
+  "name": "PayeTonKawa",
   "version": "1.0.0",
   "private": true
 }
